Updated trusted sources of Ixar ecosystem

--- a/src/qt/forms/aboutdialog.ui
+++ b/src/qt/forms/aboutdialog.ui
@@ -113,6 +113,7 @@ Copyright © 2017-2018 The Ixarcoin Developers</string>
 This is experimental software.
 
 Distributed under the MIT software license, see the accompanying file COPYING or &lt;a href=&quot;http://www.opensource.org/licenses/mit-license.php&quot;&gt;http://www.opensource.org/licenses/mit-license.php&lt;/a&gt;.
+The only trusted sources of Ixar are &lt;a href=&quot;http://www.ixar.net&quot;&gt;http://www.ixar.net&lt;/a&gt; and our Github Repo: &lt;a href=&quot;https://github.com/IXARdev&quot;&gt;https://github.com/IXARdev&lt;/a&gt;.
 
 This product includes software developed by the OpenSSL Project for use in the OpenSSL Toolkit (&lt;a href=&quot;https://www.openssl.org/&quot;&gt;https://www.openssl.org/&lt;/a&gt;) and cryptographic software written by Eric Young (&lt;a href=&quot;mailto:eay@cryptsoft.com&quot;&gt;eay@cryptsoft.com&lt;/a&gt;) and UPnP software written by Thomas Bernard.</string>
        </property>
